--- a/public/styles.css
+++ b/public/styles.css
@@ -3,9 +3,9 @@
   padding: 0;
   border: none;
   text-decoration: none;
+  list-style: none;
 }
 .navbar {
-  position: fixed;
   width: 100%;
   background-color: #2c2a25;
 }
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 10px;
+  padding: 10px;
 }
 .inner-width {
   max-width: 1300px;
@@ -100,6 +100,15 @@
   align-items: center;
   justify-content: center;
 }
-#banner img {
+.banner-container {
+  display: flexbox;
+}
+.banner-container img {
   width: 100%;
+}
+.tabsProducts ul {
+  display: flex;
+  font-size: 14px;
+  align-items: center;
+  justify-content: space-between;
 }
