--- a/public/styles.less
+++ b/public/styles.less
@@ -3,11 +3,12 @@
    padding: 0;
    border: none;
    text-decoration: none;
+   list-style: none;
 }
 
 .navbar{
    // display: flex;
-   position: fixed;
+   // position: fixed;
    width: 100%;
    // justify-content: space-between;
    // flex-wrap: wrap;
@@ -18,7 +19,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin: 10px;
+      padding: 10px;
    }
 }
 
@@ -128,9 +129,19 @@
    justify-content: center;
 }
 
-#banner{
+.banner-container{
+   display: flexbox;
+}
+
+.banner-container{
    img{
       width: 100%;
    }
 }
- 
+
+.tabsProducts ul{
+   display: flex;
+   font-size: 14px;
+   align-items: center;
+   justify-content: space-between;
+}
