--- a/public/styles.less
+++ b/public/styles.less
@@ -12,7 +12,7 @@
    width: 100%;
    // justify-content: space-between;
    // flex-wrap: wrap;
-   background-color: #2c2a25;
+   background-color: #c63131;
    // padding: 10px;
 
    .inner-width{
@@ -144,4 +144,33 @@
    font-size: 14px;
    align-items: center;
    justify-content: space-between;
+}
+
+.commercial-appeals{
+   padding: 15px;
+
+   img{
+      height: 27px;
+   }
+
+   .icon{
+      padding: 15px;
+   }
+}
+
+.each{
+   display: flex !important; 
+   flex-flow: column;
+   align-items: center;
+   justify-content: center;
+   position: relative;
+}
+
+.categorys{
+   display: grid;
+
+   img{
+      width: 50%;
+      height: 50%;
+   }
 }
