--- a/public/styles.less
+++ b/public/styles.less
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap');
+
 *{
    margin: 0;
    padding: 0;
@@ -6,20 +8,40 @@
    list-style: none;
 }
 
+body{
+   color: #c63131;
+   font-size: 62.5%;
+}
+
 .navbar{
-   // display: flex;
-   // position: fixed;
    width: 100%;
-   // justify-content: space-between;
-   // flex-wrap: wrap;
    background-color: #c63131;
-   // padding: 10px;
 
    .inner-width{
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 10px;
+   }
+
+   .header-buttons{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+   }
+
+   .logo img{
+      max-width: 138px;
+   }
+
+   a{
+      font-size: 1.2em;
+      color: white;
+      padding: 0 10px 0 10px;
+      font-family: 'montserrat';
+      font-weight: bold;
+      text-transform: uppercase;
    }
 }
 
@@ -50,20 +72,67 @@
    transition: .3s linear;
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (min-width: 768px){
+   .menu-toggler{
+      display: none;
+   }
+   .navbar-menu{
+      display: none;
+   }
+   #logo-with-menu{
+      display: none;
+   }
+   #mini-cart-with-menu{
+      display: none;
+   }
+}
+
+@media screen and (max-width: 768px){
+   .navbar{
+      .header-buttons{
+         display: none;
+      }
+   }
+
    .menu-toggler{
       display: block;
    }
 
    .navbar-menu{
       position: fixed;
-      height: 100vh;
-      width: 90%;
-      background-color: #484847;
+      height: 100%;
+      width: 80%;
+      background-color: #fafaf9;
       top: 0;
+      bottom: 0;
       left: -100%;
       max-width: 316px;
       transition: .3s linear;
+      z-index: 10;
+
+      .header-menu-toggle{
+         display: flex;
+         background-color: #c63131;
+         height: 10%;
+         align-items: center;
+         justify-content: center;
+         z-index: 5;
+
+         a{
+            font-size: 1.8em;
+
+         }
+      }
+      .body-menu-toggle{
+         margin: 30px;
+         z-index: 5;
+
+         a{
+            padding-bottom: 10px;
+            font-size: 1.8em;
+            color: #c63131 ;
+         }
+      }
    }
 
    .navbar-menu a{
@@ -82,19 +151,39 @@
 }
 
 .mini-cart{
-   a:before{
-      content: '';
-      display: block;
-      height: 36px;
-      width: 36px;
-      background-image: url("https://www.dominik.com.br/static/version1593773004/frontend/Hibrido/default/pt_BR/images/carrinho.png");
-      background-repeat: no-repeat;
-      background-position: center;
+   display: flex;
+   a{
+      display: flex;
+      align-items: center;
+   }
+   .cart{
+      color: #c63131;
+      order: 1;
+      background-color: #fff;
+      font-size: 14px;
+      width: 52px;
+      height: 50px;
+      border-radius: 52px;
+      margin: 0;
+      padding: 0;
+      line-height: 1;
+      min-width: auto;
+      transform: translate(3px, 0);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 10px;
+      border: 1px solid #fff;
+      transition: 0.3s;
    }
 }
 
-.logo img{
-   max-width: 138px;
+@media screen and (max-width: 481px){
+   .navbar{
+      #name-cart{
+         display: none;
+      }
+   }
 }
 
 .search-container{
@@ -149,28 +238,490 @@
 .commercial-appeals{
    padding: 15px;
 
+   .each{
+      display: flex !important; 
+      flex-flow: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+   }
+
    img{
-      height: 27px;
+      height: 38px;
    }
 
    .icon{
       padding: 15px;
    }
+
+   .text-icon{
+      text-align: center;
+      font-family: 'montserrat';
+      font-weight: 500;
+      color: black;
+      font-size: 15px;
+   }
 }
 
-.each{
-   display: flex !important; 
-   flex-flow: column;
-   align-items: center;
-   justify-content: center;
-   position: relative;
-}
+@media screen and (min-width: 425px){
+      .carousel-commercial-appeals{
+         width: 90%;
+         max-width: 90%;
+         margin: auto;
+
+         display: grid;
+         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+         grid-gap: 20px;
+
+         .each{
+            display: flex;
+            flex-direction: column;
+            cursor: pointer;
+            transition: all 0.3s ease 0s;
+         }
+      }
+   }
 
 .categorys{
    display: grid;
+   max-width: 1340px;
+   width: 100%;
 
    img{
       width: 50%;
       height: 50%;
+   }
+
+   .border-card{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-flow: column;
+      position: relative;
+      z-index: 5;
+      border: 4px solid #54596e;
+      border-radius: 5px;
+      height: 430px;
+   }
+}
+
+// Card
+
+.row {
+   width: 90%;
+   max-width: 100%;
+   margin: auto;
+   
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+@media screen and (max-width: 768px){
+   .row{
+      flex-flow: row wrap;
+      padding-inline-start: 0;
+   }
+}
+
+.card{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-flow: column;
+   position: relative;
+   height: 430px;
+   max-width: 330px;
+   margin: 30px;
+
+   
+   
+}
+
+.card{
+
+   .title{
+      position: absolute;
+      top: 0;
+      font-family: 'blanc';
+      color: white;
+      font-size: 26px;
+      font-weight: 900;
+      margin-top: 20px;
+   }
+
+   .image{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+   }
+
+   .image img{
+      width: 90%;
+      height: auto;
+      max-height: 193px;
+   }
+
+   a{
+      background-color: white;
+      padding: 8px 45px;
+      border-radius: 5px;
+      border: 3px solid #fff;
+      font-size: 14px;
+      letter-spacing: 1px;
+      transition: 0.3s;
+   }
+
+   .description{
+      font-family: 'montserrat';
+      color: white;
+      text-align: center;
+      font-weight: 500;
+      padding: 15px;
+      font-size: 15px;
+      letter-spacing: 1px;
+   }
+}
+
+#pulseiras{
+   background-color: #48e4c2;
+}
+
+#pulseiras-button{
+   color: #48e4c2;
+}
+
+#ingressos{
+   background-color: #ffa024;
+}
+
+#ingressos-button{
+   color: #ffa024;
+}
+
+
+#ticket{
+   background-color: #ff7c7f;
+}
+
+#ticket-button{
+   color: #ff7c7f;
+}
+
+.see-how{
+   padding: 100px 30px 100px 30px;
+   display: flex;
+   flex-flow: column;
+   align-items: center;
+   justify-content: center;
+
+   p{
+      font-size: 1.6em;
+   }
+
+   .container{
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 40vh 40vh 40vh;
+      max-width: 850px;
+      justify-content: center;
+      align-items: center;
+   }
+
+   .step{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      align-items: center;
+      justify-content: center;
+   }
+
+   #step-2{
+      text-align: right;
+   }
+
+   .card-see-how{
+      display: flex;
+      flex-flow: column;
+      align-items: center;
+      justify-content: center;
+      padding-bottom: 50px;
+   }
+
+   .click-home{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+   }
+
+   .click-home img{
+      width: 70px;
+   }
+
+   .container img{
+      max-height: 310px;
+      width: 100%;
+   }
+
+   .title-see-how{
+      font-size: 35px;
+   }
+
+   .description{
+      font-size: 15px;
+      text-align: center;
+   }
+}
+
+@media screen and (max-width: 480px){
+   .see-how .container{
+      .step-img{
+         display: none;
+      }
+
+      .step{
+         display: flex;
+         justify-content: center;
+         align-items: center;
+      }
+   }
+}
+
+
+.company-brands{
+   .title{
+      display: flex;
+      justify-content: center;
+      justify-content: center;
+      max-width: 403px;
+      margin: 0 auto;
+      font-family: 'blanc';
+      font-weight: 600;
+      color: #c63131;
+      font-size: 45px;
+      text-align: center;
+      letter-spacing: .9px;
+   }
+
+   .carousel-company-brands{
+      width: 90%;
+      margin: 30px;
+   }
+
+   img{
+      width: 90%;
+      height: auto;
+      border-radius: 50%;
+   }
+}
+
+.slick-next{
+   right: 0;
+   background-color: transparent;
+}
+
+
+// Footer
+
+.newsletter{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   margin-bottom: 20px;
+   background-color: #c63131;
+   padding: 50px 0px 50px 0px;
+   
+   .title{
+      font-family: 'blanc';
+      font-weight: 600;
+      color: #fff;
+      font-size: 32px;
+      line-height: 33px;
+      width: 100%;
+      text-align: center;
+   }
+
+   @media screen and (max-width: 767px){
+      .form-newsletter{
+         display: flex; 
+         flex-flow: row wrap;
+         justify-content: space-around;
+      }
+
+      button{
+         margin-top: 10px;
+      }
+   }
+
+   @media screen and (min-width: 768px){
+      .form-newsletter{
+         width: 100%;
+         max-width: 50%;
+         display: flex;
+         justify-content: space-evenly;
+         align-items: center;
+      }
+   }
+   
+   .form-newsletter{
+      padding-top: 30px;
+   }
+
+   input{
+      font-family: 'montserrat';
+      font-weight: 500;
+      height: 50px;
+      width: 47%;
+      border-radius: 5px;
+      background-color: #fff;
+      color: #303030;
+      border: none !important;
+      margin: 10px;
+      padding-left: 25px !important;
+   }
+
+   button{
+      font-family: 'montserrat';
+      border-radius: 5px;
+      background-color: #fff;
+      color: #c63131;
+      font-weight: 600;
+      height: 50px;
+      width: 47%;
+   }
+}
+
+.security-payment-container{
+   display: flex;
+   flex-flow: column;
+   margin: 0 30px 0 30px;
+   color: black;
+   padding-bottom: 30px;
+   align-items: center;
+   justify-content: center;
+
+   h2{
+      font-family: 'montserrat';
+      font-weight: 300;
+      line-height: 1;
+      margin-top: 0;
+      font-size: 14px;
+      color: #303030;
+      font-weight: bold;
+   }
+
+   .img-footer{
+      width: 100%;
+   }
+}
+
+@media screen and (min-width: 768px){
+   .security-payment-container{
+      display: flex;
+      flex-flow: row;
+      justify-content: space-between;
+   }
+}
+
+.informations{
+   display: grid;
+   grid-template-columns: 3fr 1fr;
+
+   border-top: 1px solid #cecece;
+   padding-top: 50px;
+   padding-bottom: 150px;
+   justify-content: space-between;
+
+   .information-right{
+      display: flex;
+      justify-content: space-evenly;
+
+      i{
+         font-size: 36px;
+      }
+   }
+
+   // .information-left{
+   //    text-align: center;
+   // }
+
+   ul>li>h3{
+      margin-top: 30px;
+      line-height: 1;
+      margin-bottom: 15px;
+      font-size: 14px;
+      color: #303030;
+      font-weight: 300;
+   }
+
+   ul>li>ol>li{
+      font-family: 'montserrat';
+      font-weight: 300;
+      letter-spacing: 0.09px;
+      font-size: 14px;
+      color: #9b9b9b;
+      transition: 0.3s;
+      padding-top: 10px;
+   }
+
+   #televendas{
+      #telefone{
+         color: #c63131;
+         font-family: 'blanc';
+         font-size: 27px;
+         font-weight: 500;
+      }
+      span{
+         font-size: 14px;
+         font-family: 'montserrat';
+         font-weight: 300;
+         color: #303030;
+      }
+   }
+}
+
+@media screen and (min-width: 768px){
+   .information-left ul{
+      display: flex;
+      flex-flow: wrap;
+      justify-content: space-between;
+      width: 70%;
+      padding-left: 20px;
+   }
+}
+
+@media screen and (max-width: 768px){
+   .informations{
+      display: flex;
+      flex-flow: column-reverse;
+      align-items: center;
+      justify-content: center;
+   }
+
+   .information-right{
+      width: 50%;
+   }
+}
+
+.copyright{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   
+   span{
+      color: #9b9b9b;
+      font-family: 'montserrat';
+      font-size: 12px;
+      line-height: 20px;
+      letter-spacing: 0.09px;
+      font-weight: 300;
+      text-align: center;
+   }
+   
+   a{
+      color: #9b9b9b;
+      font-family: 'montserrat';
+      font-size: 12px;
+      
    }
 }
