--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
       
       <link rel="stylesheet" href="../public/styles.css"/>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="../public/script.js"></script>
    </head>
    <body>
@@ -24,34 +25,79 @@
                   <span></span>
                </button>
                <div id="menu-toggle" class="navbar-menu">
-                  <a>Entrar</a>
-                  <a>registre-se</a>
-                  <a>(00) 00000-0000</a>
-                  <a>carrinho</a>
+                  <div class="header-menu-toggle">
+                     <a href="#">ENTRAR</a>
+                     <a href="#">MEUS PEDIDOS</a>
+                  </div>
+                  <div class="body-menu-toggle">
+                     <a>PULSEIRAS</a>
+                     <a>INGRESSOS</a>
+                     <a>TICKET</a>
+                  </div>
+                  
                </div>
-               <strong class="logo">
+               <strong id="logo-with-menu" class="logo">
                   <img src="https://www.printset.com.br/media/logo/stores/1/logo_printset.png" alt="logo">
                </strong>
-               <div class="mini-cart">
-                  <a href="https://www.dominik.com.br/checkout/cart/">
+
+               <div id="mini-cart-with-menu" class="mini-cart">
+                  <a href="">
+                     <span id="name-cart">CARRINHO</span>
+                     <span class="cart">0</span>
                   </a>
                </div>
+
+               <div class="header-buttons">
+                  <strong class="logo">
+                     <img src="https://www.printset.com.br/media/logo/stores/1/logo_printset.png" alt="logo">
+                  </strong>
+                  <a href="">PULSEIRAS</a>
+                  <a href="">INGRESSOS</a>
+                  <a href="">TICKET</a>
+               </div>
+
+               <div class="header-buttons">
+                  <a href="">ENTRAR</a>
+                  <a href="">MEUS PEDIDOS</a>
+                  
+                  <div class="mini-cart">
+                     <a href="https://www.dominik.com.br/checkout/cart/">
+                        <span id="name-cart">CARRINHO</span>
+                        <span class="cart">0</span>
+                     </a>
+                  </div>
+
+               </div>
             </div>
-            <!-- <div class="search-container">
-               <form class="search-box" action="/action_page.php">
-                 <input type="text" placeholder="Faça sua busca aqui..." name="search">
-                 <button type="submit"><i class="fa fa-search"></i></button>
-               </form>
-             </div> -->
          </nav>
       <!-- </header> -->
 
       <div class="banner-container">
          <div class="carousel">
-            <div><img src="https://www.printset.com.br/media/contentmanager/content/banner-hospital-mobile.png" alt="Hospital" /></div>
-            <div><img src="https://www.printset.com.br/media/contentmanager/content/banner-site-printset-5x-sem-juros-mobile.png" alt="juros" /></div>
-            <div><img src="https://www.printset.com.br/media/contentmanager/content/banner1%20mobile_2.jpg" alt="pulseria"/></div>
-            <div><img src="https://www.printset.com.br/media/contentmanager/content/banner-site-novo-printset-mobile.png" alt="site-novo" /></div>
+            <div>
+               <picture>
+                  <source media="(min-width: 768px)" srcset="https://www.printset.com.br/media/contentmanager/content/banner-hospital.png" alt="banner-hospital-mobile.png">
+                  <img src="https://www.printset.com.br/media/contentmanager/content/banner-hospital-mobile.png" alt="banner-hospital-mobile.png">
+              </picture>
+            </div>
+            <div>
+               <picture>
+                  <source media="(min-width: 768px)" srcset="https://www.printset.com.br/media/contentmanager/content/banner-site-printset-5x-sem-juros.png" alt="banner-site-printset-5x-sem-juros-mobile.png">
+                  <img src="https://www.printset.com.br/media/contentmanager/content/banner-site-printset-5x-sem-juros-mobile.png" alt="banner-site-printset-5x-sem-juros-mobile.png">
+              </picture>
+            </div>
+            <div>
+               <picture>
+                  <source media="(min-width: 768px)" srcset="https://www.printset.com.br/media/contentmanager/content/banner1%20desktop_1.jpg" alt="banner1 mobile_2.jpg">
+                  <img src="https://www.printset.com.br/media/contentmanager/content/banner1%20mobile_2.jpg" alt="banner1 mobile_2.jpg">
+              </picture>
+            </div>
+            <div>
+               <picture>
+                  <source media="(min-width: 768px)" srcset="https://www.printset.com.br/media/contentmanager/content/banner%202%20desktop_2.jpg" alt="banner-site-novo-printset-mobile.png">
+                  <img src="https://www.printset.com.br/media/contentmanager/content/banner-site-novo-printset-mobile.png" alt="banner-site-novo-printset-mobile.png">
+              </picture>
+            </div>
          </div>
       </div>
       
@@ -59,7 +105,7 @@
          <div class="carousel-commercial-appeals">
             <div class="each">
                <div class="icon">
-                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/apelo04.svg" alt="">
+                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/apelo01.svg" alt="">
                </div>
                <div class="text-icon">
                   Mais de 22 anos de tradição e confiança
@@ -68,7 +114,7 @@
 
             <div class="each">
                <div class="icon">
-                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/apelo04.svg" alt="">
+                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/apelo02.svg" alt="">
                </div>
                <div class="text-icon">
                   Qualidade máxima Tyvek
@@ -77,7 +123,7 @@
 
             <div class="each">
                <div class="icon">
-                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/apelo04.svg" alt="">
+                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/apelo03.svg" alt="">
                </div>
                <div class="text-icon">
                   Produto com tecnologia anti-falsificação
@@ -95,7 +141,7 @@
 
             <div class="each">
                <div class="icon">
-                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/apelo04.svg" alt="">
+                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/apelo05.svg" alt="">
                </div>
                <div class="text-icon">
                   Agilidade na produção e entrega
@@ -106,86 +152,164 @@
       </div>
 
       <div class="categorys">
-         <div class="content">
-            <ul>
-               <li><img src="https://www.printset.com.br/media/contentmanager/content/pulseira.png" alt="Pulseiras"></li>
-               <li><img src="https://www.printset.com.br/media/contentmanager/content/ingresso.png" alt="Ingressos"></li>
-               <li><img src="https://www.printset.com.br/media/contentmanager/content/ticket.png" alt="Ticket"></li>
-            </ul>
+         <div class="row">
+            <div id="pulseiras" class="card border-card">
+               <div class="title">Pulseiras</div>
+               <div class="image"><img src="https://www.printset.com.br/media/contentmanager/content/pulseira.png" alt="Ingressos"></div>
+               <div class="description"><p>Para melhor organizar seu evento e o controle de pessoas.</p></div>
+               <a id="pulseiras-button" href=""><span>Ver mais</span></a>
+            </div>
+         
+            <div id="ingressos" class="card border-card">
+               <div class="title">Ingressos</div>
+               <div class="image"><img src="https://www.printset.com.br/media/contentmanager/content/ingresso.png" alt="Ingressos"></div>
+               <div class="description"><p>Para melhor organizar seu evento e o controle de pessoas.</p></div>
+               <a id="ingressos-button" href=""><span>Ver mais</span></a>
+            </div>
+
+            <div id="ticket" class="card border-card">
+               <div class="title">Ticket</div>
+               <div class="image"><img src="https://www.printset.com.br/media/contentmanager/content/ticket.png" alt="Ticket"></div>
+               <div class="description"><p>Para melhor organizar seu evento e o controle de pessoas.</p></div>
+               <a id="ticket-button" href=""><span>Ver mais</span></a>
+            </div>
          </div>
       </div>
 
       <div class="see-how">
-         <div class="content">
-            <div class="see-how-general">
-               <div class="title">
-                  <div class="click">
-                     <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/click.png" alt="Click home">
-                  </div>
-                  <h3>Veja como é fácil</h3>
-                  <p>
-                     Crie o material que seu evento precisa com<br>
-                     apenas alguns toques e aproveite a festa.
-                  </p>
+         <div class="card-see-how">
+            <div class="click-home"><img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/click.png" alt="Click home"></div>
+            <div class="title-see-how"><h3>Veja como é fácil</h3></div>
+            <div class="description"><p>Crie o material que seu evento precisa com<br>
+               apenas alguns toques e aproveite a festa.</p></div>
+         </div>
+
+         <div class="container">
+
+            <div class="step">
+               <div class="step-img">
+                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/passo-1.svg" alt="Passo 1">
                </div>
-               <div class="step-1">
-                  <div class="step-img">
-                     <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/passo-1.svg" alt="Passo 1">
+               <div class="step-text">
+                  <div class="title-see-how">
+                     <h3>01.<br>Personalise</h3>
                   </div>
-                  <div class="step-text">
-                     <h4>01.</h4>
-                     <h3>Personalise</h3>
-                     <p>Contamos com materiais de apoio para você se preocupar apenas em aproveitar a festa, escolha o
-                        produto que deseja nessa etapa.</p>
-                  </div>
-               </div>
-               <div class="step-2">
-                  <div class="step-img">
-                     <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/passo-2.svg" alt="Passo 2">
-                  </div>
-                  <div class="step-text">
-                     <h4>01.</h4>
-                     <h3>Personalise</h3>
-                     <p>Contamos com materiais de apoio para você se preocupar apenas em aproveitar a festa, escolha o
-                        produto que deseja nessa etapa.</p>
-                  </div>
-               </div>
-               <div class="step-3">
-                  <div class="step-img">
-                     <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/passo-3.svg" alt="Passo 3">
-                  </div>
-                  <div class="step-text">
-                     <h4>01.</h4>
-                     <h3>Personalise</h3>
-                     <p>Contamos com materiais de apoio para você se preocupar apenas em aproveitar a festa, escolha o
-                        produto que deseja nessa etapa.</p>
-                  </div>
+                  <p>Contamos com materiais de apoio para você se preocupar apenas em aproveitar a festa, escolha o
+                     produto que deseja nessa etapa.</p>
                </div>
             </div>
+
+            <div class="step" id="step-2">
+               <div class="step-text">
+                  <div class="title-see-how">
+                     <h3>02.<br>Aprove</h3>
+                  </div>
+                  <p>Nessa etapa do processo você pode escolher o produto, as cores e como ele vai ser personalizado
+                     para atender todas as necessidades que seu evento precisa.</p>
+               </div>
+               <div class="step-img">
+                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/passo-2.svg" alt="Passo 2">
+               </div>
+            </div>
+
+            <div class="step">
+               <div class="step-img">
+                  <img src="https://www.printset.com.br/static/frontend/Hibrido/default/pt_BR/images/svg/passo-3.svg" alt="Passo 3">
+               </div>
+               <div class="step-text">
+                  <div class="title-see-how">
+                     <h3>03.<br>Pague</h3>
+                  </div>
+                  <p>O pagamento somente é realizado depois que você aprovar a arte, assim dando mais segurança e
+                     tranquilidade.</p>
+               </div>
+            </div>
+
          </div>
+
       </div>
 
       <div class="company-brands">
          <div class="content">
-            <div class="titulo">
+            <div class="title">
                <h3>Veja quem confia e usa Printset</h3>
             </div>
-            <div class="carousel">
-
+            <div class="carousel-company-brands">
+               <div class="img-company"><img src="https://www.printset.com.br/media/contentmanager/content/cache/160x160//geen valley.png" alt="Gream Valley" /></div>
+               <div class="img-company"><img src="https://www.printset.com.br/media/contentmanager/content/cache/160x160//02_1.png" alt="Beto Carreiro" /></div>
+               <div class="img-company" ><img src="https://www.printset.com.br/media/contentmanager/content/cache/160x160//06_1.png" alt="1007"/></div>
+               <div class="img-company" ><img src="https://www.printset.com.br/media/contentmanager/content/cache/160x160//matahari.png" alt="Matahari" /></div>
+               <div class="img-company" ><img src="https://www.printset.com.br/media/contentmanager/content/cache/160x160//shed.png" alt="Shed" /></div>
+               <div class="img-company" ><img src="https://www.printset.com.br/media/contentmanager/content/cache/160x160//p12.png" alt="P12" /></div>
             </div>
          </div>
       </div>
 
       <footer class="page-footer">
          <div class="newsletter">
+            <div class="title">Cadastre-se e receba nossas novidades</div>
+            <div class="form-newsletter">
+               <input type="Seu nome" placeholder="Seu Nome">
+               <input type="Seu e-mail" placeholder="E-mail">
+               <button>Receber novidades</button>
+            </div>
+         </div>
 
-         </div>
          <div class="security-payment-container">
-            <h2>Segurança</h2>
-            <img src="https://www.printset.com.br/media/wysiwyg/seguranca.png" alt="Segurança">
-            <h2>Pagamento</h2>
-            <img src="https://www.printset.com.br/media/wysiwyg/pagamento.png" alt="Segurança">
+            <div class="security">
+               <h2>Segurança</h2>
+               <img class="img-footer" src="https://www.printset.com.br/media/wysiwyg/seguranca.png" alt="Segurança">
+            </div>
+
+            <div class="payment">
+               <h2>Pagamento</h2>
+               <img class="img-footer"  src="https://www.printset.com.br/media/wysiwyg/pagamento.png" alt="Segurança">
+            </div>
          </div>
+
+         <div class="informations">
+            <div class="information-left">
+               <ul>
+                  <li>
+                     <h3>Sobre nós</h3>
+                     <ol>
+                        <li> A Printset </li>
+                        <li> Trabalhe com a gente </li>
+                        <li> Fale conosco </li>
+                     </ol>
+                  </li>
+                  <li>
+                     <h3>Compre com segurança</h3>
+                     <ol>
+                        <li> Política de Privacidade </li>
+                        <li> Trocas e Devoluções </li>
+                        <li> Política de Entrega </li>
+                        <li> Como Comprar? </li>
+                     </ol>
+                  </li>
+                  <li id="televendas">
+                     <h3>Televendas</h3>
+                     <ol>
+                        <li id="telefone"> 47 3340 5949 </li>
+                        <li><span>De segunda sexta-feira</span></li>
+                        <li><span>das 8h às 12h e 13h às 18h.</span></li>
+                        <li> contato@printset.com.br </li>
+                     </ol>
+                  </li>
+               </ul>
+            </div>
+            <div class="information-right">
+               <i class="fa fa-facebook-f"></i>
+               <i class="fa fa-twitter"></i>
+               <i class="fa fa-instagram"></i>
+            </div>
+
+            
+         </div>
+
+         <small class="copyright">
+            <span><span>Printset Pulseiras e Ingressos Eireli - Epp CNPJ: 01.362.467/0001-44<br>Rua Alfredo Kaestner, 551 - Bairro Vorstadt - Blumenau - Santa Catarina - CEP 89015-540</span><div class="hibrido"><a href="https://www.souhibrido.com.br/?utm_source=assinatura&amp;utm_medium=sites&amp;utm_campaign=printset">Desenvolvido por</a></div></span>
+        </small>
       </footer>
    </body>
 </html>
